# ruchat

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  client-config.example.json  ruchat.db  ruchat.db-shm  ruchat.db-wal
apps/command-client/: Cargo.toml
apps/command-client/src/: bootstrap.rs  config.rs  executor.rs  main.rs  ws.rs
apps/command-server/: Cargo.toml
apps/command-server/src/: app_state.rs  auth.rs  config.rs  console.rs  db.rs  http.rs  main.rs  session.rs  ws.rs
crates/command-protocol/: Cargo.toml
crates/command-protocol/proto/: control.proto  transport.proto
crates/command-protocol/src/: codec.rs  conversions.rs  domain.rs  http.rs  lib.rs  mqtt.rs  pb.rs  topic.rs
doc/: capability-baseline.md  env.md  execution-roadmap.md  long-connection-spec.md  manual-e2e.md  practical-guide.md  remote-command-refactor-plan.md
example/ru-frame-example/ru-boot-example/: Cargo.toml
example/ru-frame-example/ru-boot-example/src/: main.rs
ru-app/ru-api-server/: Cargo.toml
ru-app/ru-api-server/src/: auth.rs  config.rs  console.rs  db.rs  error.rs  main.rs  session.rs  ws.rs
ru-app/ru-api-server/src/doc/: metadata_api.http  metadata_api.yaml  user_api.http  user_api.yaml
ru-app/ru-api-server/src/metadata/: mod.rs
ru-app/ru-api-server/src/user/: mod.rs
ru-app/ru-api-user/: Cargo.toml
ru-app/ru-api-user/src/: config.rs  main.rs
ru-app/ru-web-console/: Cargo.toml
ru-frame/ru-boot/ru-boot-starter/: Cargo.toml
ru-frame/ru-boot/ru-config-starter/: Cargo.toml
ru-frame/ru-boot/ru-config-starter/src/: main.rs
ru-frame/ru-boot/ru-metrics-starter/: Cargo.toml  dev.md
ru-frame/ru-boot/ru-metrics-starter/src/: lib.rs  metrics.rs  request_metrics.rs  resource_metrics.rs  tokio_runtime.rs
ru-frame/ru-data/ru-mysql-starter/: Cargo.toml
ru-frame/ru-data/ru-redis-starter/: Cargo.toml
ru-frame/ru-protocol/ru-command-protocol/: Cargo.toml
ru-frame/ru-protocol/ru-command-protocol/src/: conversions.rs  domain.rs  mqtt.rs
ru-frame/ru-protocol/ru-mqtt-starter/: Cargo.toml
scripts/: run-client-dev.sh  run-server-dev.sh
