[workspace]
resolver = "2"
members = [
    "ru-app/ru-api-server",
    "ru-app/ru-api-user",
    "ru-frame/ru-protocol/ru-command-protocol",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["wuhao"]
repository = "https://github.com/wuhaocn/ruchat"

[workspace.dependencies]
log = "0.4"
axum = "0.6.20"
futures-util = "0.3.31"
hyper = { version = "0.14.32", features = ["client", "http1", "server", "tcp"] }
prost = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.20.1"
