[package]
name = "command-plane-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
futures-util.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
ru_command_protocol = { package = "command-plane-protocol", path = "../../crates/command-protocol" }
