[package]
name = "command-plane-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ru_command_protocol = { package = "command-plane-protocol", path = "../../crates/command-protocol" }
rusqlite = "0.31.0"
