[package]
name = "ru-command-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ru-command-protocol = { path = "../../ru-frame/ru-protocol/ru-command-protocol" }
rusqlite = "0.31.0"
