[package]
name = "ru-boot-example"
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ru-metrics-starter = { path = "../../../ru-frame/ru-boot/ru-metrics-starter" }
prometheus = "0.13.0"
tokio = { version = "1.30", features = ["full"] }
sysinfo = "0.32.0"
warp = "0.3"




